[package]
name = "ruja"
version = "0.2.1-alpha"
edition = "2021"
authors = ["flyingsquirrel0419"]
description = "RuJa - A JavaScript engine written in Rust"
license = "Apache-2.0"
repository = "https://github.com/flyingsquirrel0419/RuJa"
homepage = "https://github.com/flyingsquirrel0419/RuJa"
readme = "README.md"
keywords = ["javascript", "js", "interpreter", "engine", "runtime"]
categories = ["compilers", "development-tools", "parser-implementations"]


[dependencies]
indexmap = "=2.2.6"
regex = "1"
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
num-integer = "0.1"

[lib]
name = "ruja"
path = "src/lib.rs"

[[bin]]
name = "ruja"
path = "src/bin/ruja.rs"
